--- a/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
+++ b/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
@@ -13,13 +13,14 @@
   - !type:IngredientsWithTags
     tags:
     - Cooked
+    - Cutlet
     - Meat
     count:
       min: 1
-      max: 2
+      max: 1
   - !type:IngredientsWithTags
     tags:
     - Cheese
     count:
       min: 1
-      max: 2
+      max: 1
