--- a/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
+++ b/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
@@ -5,22 +5,49 @@
   rules:
   - !type:SequenceLength
     range:
-      max: 4
       min: 3
-  - !type:LastElementHasTags
-    tags:
-    - Bun
-  - !type:IngredientsWithTags
+      max: 4
+  - !type:IngredientsWithTags # 1 meat cutlet
     tags:
     - Cooked
     - Cutlet
     - Meat
     count:
       min: 1
-      max: 1
-  - !type:IngredientsWithTags
+      max: 2
+  - !type:IngredientsWithTags # 1 cheese
     tags:
     - Cheese
     count:
       min: 1
-      max: 1
+      max: 2
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerChicken
+  key: burger
+  result: FoodBurgerChicken
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 2
+      max: 3
+  - !type:IngredientsWithTags # 1 chicken meat
+    tags:
+    - Cooked
+    - Cutlet
+    - Meat
+    - Chicken
+    count:
+      min: 1
+      max: 2
+  - !type:FoodHasReagent # 5 +- 2 mayo
+    reagent: Mayo
+    count:
+     min: 3
+     max: 7
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
