--- a/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
+++ b/Resources/Prototypes/Recipes/Cooking/sequence_metamorph.yml
@@ -1,3 +1,7 @@
+# rules for transferring recipes from microwaveMealRecipe
+# 1) leave room for variation. If the original recipe calls for 2 pieces of meat, allow players to put in 2-3 pieces.
+# 2) max SequenceLength must be 1 element greater than the minimum ingredient set requires. This will allow you to put 1 poison fly or 1 other ingredient in different recipes and the recipes will still be valid.
+
 - type: metamorphRecipe
   id: FoodBurgerCheese
   key: burger
@@ -48,6 +52,55 @@
     count:
      min: 3
      max: 7
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerCrab
+  key: burger
+  result: FoodBurgerCrab
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 3
+      max: 4
+  - !type:IngredientsWithTags # 2 crab meat
+    tags:
+    - Cooked
+    - Meat
+    - Crab
+    count:
+      min: 2
+      max: 3
+  - !type:LastElementHasTags # last bun
+    tags:
+    - Bun
+
+- type: metamorphRecipe
+  id: FoodBurgerDuck
+  key: burger
+  result: FoodBurgerDuck
+  rules:
+  - !type:SequenceLength
+    range:
+      min: 3
+      max: 4
+  - !type:IngredientsWithTags # 1 duck meat
+    tags:
+    - Cooked
+    - Cutlet
+    - Meat
+    - Duck
+    count:
+      min: 1
+      max: 2
+  - !type:IngredientsWithTags # 1 cheese
+    tags:
+    - Cheese
+    count:
+      min: 1
+      max: 2
   - !type:LastElementHasTags # last bun
     tags:
     - Bun
