--- a/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
+++ b/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
@@ -448,3 +448,15 @@
   tags:
   - Vegetable
 
+# Tomato
+
+- type: foodSequenceElement
+  id: TomatoSkewer
+  name: food-sequence-content-tomato
+  sprites:
+  - sprite: Objects/Consumable/Food/skewer.rsi
+    state: skewer-tomato
+  tags:
+  - Fruit
+  - Vegetable
+
