--- a/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
+++ b/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
@@ -362,6 +362,16 @@
   - Fruit
   - Slice
 
+- type: foodSequenceElement
+  id: WatermelonSliceSkewer
+  name: food-sequence-content-watermelon
+  sprites:
+  - sprite: Objects/Consumable/Food/skewer.rsi
+    state: skewer-watermelon
+  tags:
+  - Fruit
+  - Slice
+
 # Chili pepper
 
 - type: foodSequenceElement
