--- a/Resources/Prototypes/Reagents/biological.yml
+++ b/Resources/Prototypes/Reagents/biological.yml
@@ -87,7 +87,7 @@
   name: reagent-name-mucin
   group: Biological
   desc: reagent-desc-mucin
-  flavor: slimy
+  flavor: like snot
   color: "#b1d8c1"
   recognizable: true
   physicalDesc: reagent-physical-desc-viscous
