--- a/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
+++ b/Resources/Prototypes/Recipes/Cooking/food_sequence_element.yml
@@ -473,6 +473,211 @@
   - Brain
   - Raw
 
+# Banana
+
+- type: foodSequenceElement
+  id: Banana
+  name: food-sequence-content-banana
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/banana.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Mimana
+
+- type: foodSequenceElement
+  id: Mimana
+  name: food-sequence-content-mimana
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/mimana.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Carrot
+
+- type: foodSequenceElement
+  id: Carrot
+  name: food-sequence-content-carrot
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/carrot.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+- type: foodSequenceElement
+  id: CarrotBurger
+  name: food-sequence-burger-content-carrot
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/carrot.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+# Cabbage
+
+- type: foodSequenceElement
+  id: Cabbage
+  name: food-sequence-content-cabbage
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/carrot.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+- type: foodSequenceElement
+  id: CabbageBurger
+  name: food-sequence-burger-content-cabbage
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/cabbage.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+# Garlic
+
+- type: foodSequenceElement
+  id: Garlic
+  name: food-sequence-content-garlic
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/garlic.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+- type: foodSequenceElement
+  id: GarlicBurger
+  name: food-sequence-burger-content-garlic
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/garlic.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+# Lemon
+
+- type: foodSequenceElement
+  id: Lemon
+  name: food-sequence-content-lemon
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lemon.rsi
+    state: produce
+  tags:
+    - Fruit
+
+# Lemoon
+
+- type: foodSequenceElement
+  id: Lemoon
+  name: food-sequence-content-lemoon
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lemoon.rsi
+    state: produce
+  tags:
+    - Fruit
+
+# Lime
+
+- type: foodSequenceElement
+  id: Lime
+  name: food-sequence-content-lime
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lime.rsi
+    state: produce
+  tags:
+    - Fruit
+
+# Orange
+
+- type: foodSequenceElement
+  id: Orange
+  name: food-sequence-content-orange
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/orange.rsi
+    state: produce
+  tags:
+    - Fruit
+
+# Potato
+
+- type: foodSequenceElement
+  id: Potato
+  name: food-sequence-content-potato
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/potato.rsi
+    state: produce
+  tags:
+    - Vegetable
+
+# Tomato
+
+- type: foodSequenceElement
+  id: Tomato
+  name: food-sequence-content-tomato
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/tomato.rsi
+    state: produce
+  tags:
+  - Fruit
+  - Vegetable
+
+- type: foodSequenceElement
+  id: TomatoSkewer
+  name: food-sequence-content-tomato
+  sprites:
+  - sprite: Objects/Consumable/Food/skewer.rsi
+    state: skewer-tomato
+  tags:
+  - Fruit
+  - Vegetable
+
+# Blue Tomato
+
+- type: foodSequenceElement
+  id: BlueTomato
+  name: food-sequence-content-tomato
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/blue_tomato.rsi
+    state: produce
+  tags:
+  - Fruit
+  - Vegetable
+
+# Blood Tomato
+
+- type: foodSequenceElement
+  id: BloodTomato
+  name: food-sequence-content-tomato
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/blood_tomato.rsi
+    state: produce
+  tags:
+  - Fruit
+  - Vegetable
+
+# Apple
+
+- type: foodSequenceElement
+  id: Apple
+  name: food-sequence-content-apple
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/apple.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Golden Apple
+
+- type: foodSequenceElement
+  id: GoldenApple
+  name: food-sequence-content-apple
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/golden_apple.rsi
+    state: produce
+  tags:
+  - Fruit
+
 # Pineapple
 
 - type: foodSequenceElement
@@ -630,15 +835,301 @@
   tags:
   - Vegetable
 
-# Tomato
+# Aloe
 
 - type: foodSequenceElement
-  id: TomatoSkewer
-  name: food-sequence-content-tomato
+  id: Aloe
+  name: food-sequence-content-aloe
   sprites:
-  - sprite: Objects/Consumable/Food/skewer.rsi
-    state: skewer-tomato
+  - sprite: Objects/Specific/Hydroponics/aloe.rsi
+    state: produce
   tags:
-  - Fruit
   - Vegetable
 
+# Poppy
+
+- type: foodSequenceElement
+  id: Poppy
+  name: food-sequence-content-poppy
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/poppy.rsi
+    state: produce
+  tags:
+  - Flower
+
+# lily
+
+- type: foodSequenceElement
+  id: Lily
+  name: food-sequence-content-lily
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lily.rsi
+    state: produce
+  tags:
+  - Flower
+
+# lingzhi
+
+- type: foodSequenceElement
+  id: Lingzhi
+  name: food-sequence-content-mushroom
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lingzhi.rsi
+    state: produce
+
+- type: foodSequenceElement
+  id: LingzhiBurger
+  name: food-sequence-burger-content-mushroom
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/lingzhi.rsi
+    state: produce
+
+# AmbrosiaVulgaris
+
+- type: foodSequenceElement
+  id: AmbrosiaVulgaris
+  name: food-sequence-content-ambrosia
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
+    state: produce
+
+- type: foodSequenceElement
+  id: AmbrosiaVulgarisBurger
+  name: food-sequence-burger-content-ambrosia
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
+    state: produce
+
+# AmbrosiaDeus
+
+- type: foodSequenceElement
+  id: AmbrosiaDeus
+  name: food-sequence-content-ambrosia
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/ambrosia_deus.rsi
+    state: produce
+
+- type: foodSequenceElement
+  id: AmbrosiaDeusBurger
+  name: food-sequence-burger-content-ambrosia
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/ambrosia_deus.rsi
+    state: produce
+
+# Glasstle
+
+- type: foodSequenceElement
+  id: Glasstle
+  name: food-sequence-content-glasstle
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/glasstle.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: GlasstleBurger
+  name: food-sequence-burger-content-glasstle
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/glasstle.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# FlyAmanita
+
+- type: foodSequenceElement
+  id: FlyAmanita
+  name: food-sequence-content-mushroom
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/fly_amanita.rsi
+    state: produce
+
+- type: foodSequenceElement
+  id: FlyAmanitaBurger
+  name: food-sequence-burger-content-mushroom
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/fly_amanita.rsi
+    state: produce
+
+# Gatfruit
+
+- type: foodSequenceElement
+  id: Gatfruit
+  name: food-sequence-content-gatfruit
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/gatfruit.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: GatfruitBurger
+  name: food-sequence-burger-content-gatfruit
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/gatfruit.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Capfruit
+
+- type: foodSequenceElement
+  id: Capfruit
+  name: food-sequence-content-capfruit
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/capfruit.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: CapfruitBurger
+  name: food-sequence-burger-content-capfruit
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/capfruit.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Soybeans
+
+- type: foodSequenceElement
+  id: Soybeans
+  name: food-sequence-content-soy
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/soybeans.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+- type: foodSequenceElement
+  id: SoybeansBurger
+  name: food-sequence-burger-content-soy
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/soybeans.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+# SpacemansTrumpet
+
+- type: foodSequenceElement
+  id: SpacemansTrumpet
+  name: food-sequence-content-trumpet
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/spacemans_trumpet.rsi
+    state: produce
+  tags:
+  - Flower
+
+- type: foodSequenceElement
+  id: SpacemansTrumpetBurger
+  name: food-sequence-burger-content-trumpet
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/spacemans_trumpet.rsi
+    state: produce
+  tags:
+  - Flower
+
+# Koibean
+
+- type: foodSequenceElement
+  id: Koibean
+  name: food-sequence-content-koibean
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/koibean.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: KoibeanBurger
+  name: food-sequence-burger-content-koibean
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/koibean.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Galaxythistle
+
+- type: foodSequenceElement
+  id: Galaxythistle
+  name: food-sequence-content-galaxy
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/galaxythistle.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: GalaxythistleBurger
+  name: food-sequence-burger-content-galaxy
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/galaxythistle.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# bungo
+
+- type: foodSequenceElement
+  id: Bungo
+  name: food-sequence-content-bungo
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/bungo.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: BungoBurger
+  name: food-sequence-burger-content-bungo
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/bungo.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Pea
+
+- type: foodSequenceElement
+  id: Pea
+  name: food-sequence-content-pea
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/pea.rsi
+    state: produce
+  tags:
+  - Vegetable
+
+# Cherry
+
+- type: foodSequenceElement
+  id: Cherry
+  name: food-sequence-content-cherry
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/cherry.rsi
+    state: produce
+  tags:
+  - Fruit
+
+# Berries
+
+- type: foodSequenceElement
+  id: Berries
+  name: food-sequence-content-berries
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/berries.rsi
+    state: produce
+  tags:
+  - Fruit
+
+- type: foodSequenceElement
+  id: BerriesBurger
+  name: food-sequence-burger-content-berries
+  sprites:
+  - sprite: Objects/Specific/Hydroponics/berries.rsi
+    state: produce
+  tags:
+  - Fruit
