mucin + propulsion gel spill tile reactions

--- a/Resources/Prototypes/Reagents/biological.yml
+++ b/Resources/Prototypes/Reagents/biological.yml
@@ -102,6 +102,8 @@
     collection: FootstepBlood
     params:
       volume: 6
+  tileReactions:
+    - !type:SpillTileReaction
 
 - type: reagent
   id: Sap
